# Julia_Backtester

./: .gitignore  ATLAS_BUILD_SETUP.md  ATLAS_CPP_VERIFICATION_PLAN.md  ATLAS_VERIFICATION_REPORT.md  CHANGELOG.md  CLIENT_TEST_INSTRUCTIONS.md  CONFIRMED_CLIENT_INSTRUCTIONS.md  Checklist.md  DemoSmallStrategy.jl  MIGRATION_SUMMARY.md  Manifest.toml  QuickValidateSmallStrategy.jl  README.md  RunSmallStrategyTests.ps1  SMALLSTRATEGY_README.md  SMALLSTRATEGY_VERIFICATION_REPORT.md  datasets.txt  run_smallstrategy_tests.bat  simple_validation.jl
.circleci/: config.yml
.github/workflows/: deploy-stagging.yml  deploy_dev.yml  deploy_prod.yml  test_ci.yml
.qoder/quests/: small-strategy-json-tests.md
App/: Dockerfile  FlowMap.jl  LaunchServer.sh  Main.jl  Manifest.toml  Project.toml  Server.jl  comprehensive_test_runner.jl  run_tests.jl  run_tests_simple.jl
App/BacktestUtils/: BacktestUtils.jl  ErrorHandlers.jl  FlowData.jl  GlobalCache.jl  GlobalLRUCache.jl  ReturnCalculations.jl  SIMDOperations.jl  SubTreeCache.jl  TASorting.jl  TimeCalculation.jl  Types.jl
App/Data&TA/: DataUtils.jl  DuckDbManager.jl  StockData.jl  TAFunctions.jl  config.jl
App/DebuggingScripts/: BacktestAPICall.py  DevDebug.jl  LiveExectionAPI.py  LiveExecutionTest.jl  LogsCompartor.py  TruncateGlobalCache.jl
App/NodeProcessors/: AllocationNode.jl  CloudNode.jl  ConditonalNode.jl  LockOnTriggerNode.jl  SortNode.jl  StockNode.jl
App/Routes/: RoutesBacktest.jl  RoutesTA.jl
App/Tests/: BenchmarkTimes.jl  RunSmallStrategyTests.jl  SmallStrategyIntegrationTest.jl
App/Tests/E2E/: E2ETest.jl  FileComparator.jl  SubtreeComparator.py
App/Tests/E2E/ExpectedFiles/: LargeStrategy.json  MediumStrategy.json  SmallStrategy.json
App/Tests/E2E/JSONs/: LargeStrategy.json  MediumStrategy.json  SmallStrategy.json
App/Tests/NodeTests/: AllocationNodeTest.jl  CloudNodeTest.jl  ConditionalNodeTest.jl  LockOnTriggerNodeTest.jl  SortNodeTest.jl  StockNodeTest.jl
App/Tests/SmokeTests/: APITests.jl  IgnoreCommentTest.jl  ReturnTickerDatesTest.jl  SyntheticStockTests.jl  TimeComparisonTest.jl
App/Tests/SmokeTests/NodeTests/: ComposerTest-front-vix-rot.json  ComposerTestEasy.json  InverseVolatilityTests.jl
App/Tests/SmokeTests/OneDayRun/: RemoveLastLine.sh  TestOneDayRun.jl
App/Tests/TestsJSON/DevJSON/: 1PsncVZQkwnJ69Pe0l41.json  6idb9D5kCMKf7R3hJsp9-a.json  6idb9D5kCMKf7R3hJsp9.json  AAPL.json  B4pXp3aZuBHKs3VD6Fc1.json  ChildSameHashChecker.js  LtZqVQ48JIHF8dn0GcZ9.json  eQLH8exlZQZZdznxzHM1.json  fail.json  fail2.json  if.json  marketcap.json  meta.json  new.json  qacthueK3AdDSjjmoKSh-a.json  strat2.json  strat3.json  subtree_test.json  test.json
App/Tests/TestsJSON/SmokeTestsJSON/: Comment-strategy.json  Everything.json  LOTSS.json  LockOnTriggerTest.json  SmokeTestLarge.json  SmokeTestMedium.json  SmokeTestSmall.json  Subtreecall1.json  Subtreecall2.json
App/Tests/TestsJSON/SyntheticStockJSON/: current_price.json  empty_path.json  no_folder.json  recursion.json  valid.json
App/Tests/TestsJSON/UnitTestsJSON/: Algo_expired_tickers.json  USED-IN-TEST-a2e-semi-med.json  (+9 more)
App/Tests/UnitTests/: BacktestServiceTests.jl  BacktestTests.jl  FlowMapTests.jl  GlobalLRUCacheTest.jl  MetaDataTests.jl  SIMDTests.jl  SmallStrategyTest.jl  StockDataTests.jl  SubTreeCacheTest.jl  TAFunctionsTests.jl
App/Utils/: RoutesBacktestUtils.jl  RoutesTAUtils.jl
Extras/BackTraders/stock-ratio/: stock_ratio.py
Extras/CloudNodeMockAPI/: RestAPI.py  data.json
Extras/ComposerScripts/: composer.py  main.py
Extras/ComposerScripts/sortBy-diff/: all.py  generate_test_logs.sh
Extras/Experiment/: CopyParquets.jl  ExperimentArrow.jl  ExperimentBaseline.jl  ExperimentDuckDB.jl  ExperimentParquet2.jl  ExperimentTempFSArrow.jl  ExperimentTempFSParquet.jl  ExperimentTempFSStockDataArrow.jl  ExperimentTempFSStockDataParquet.jl  ParquetToArrow.jl
Extras/GenieServer/: RoutesBacktest.jl  RoutesTA.jl  Server.jl  vec_backtest_api.jl
Extras/LiveDataMockAPI/: RestAPI.py
Extras/ReversedTA/: Stock_Data.jl  TA_Functions.jl
Extras/Utilities/: MaxTicker.jl  TestWriter.jl  fetch_parquets.py  get_stock_symbols.py  max_ticker.jl  mock_backtesting_client.py  mock_backtesting_server.py
Scripts/Formatter/: FilesFormatter.jl
Scripts/ProjectSetup/: DataDownloader.py  PackageInstaller.sh  SetupDependencies.jl  SetupHooks.py
Scripts/Types&ErrorCheck/: CheckFilesTypes&Error.jl  CheckFilesTypes&ErrorWorkflow.jl  PrePushCheck.jl
TestReports/: tests_2025-03-26.md
cpp_backtester/: CMakeLists.txt  README.md  SmallStrategy.json  build_simple.bat  convert_to_julia_format.py  create_julia_output.bat  enhanced_small_strategy_validator.cpp  performance_test.cpp  run_verification.bat  small_strategy_validator.cpp  verification_output.txt
cpp_backtester/include/: allocation_node.h  backtesting_engine.h  conditional_node.h  global_cache.h  node_processor.h  sort_node.h  stock_data_provider.h  stock_node.h  strategy.h  strategy_parser.h  subtree_cache.h  ta_functions.h  types.h
cpp_backtester/src/: CMakeLists.txt  allocation_node.cpp  main.cpp
cpp_backtester/src/cache/: global_cache.cpp  subtree_cache.cpp
cpp_backtester/src/core/: cache_data.cpp  day_data.cpp  stock_info.cpp  subtree_context.cpp  types.cpp
cpp_backtester/src/data/: stock_data_provider.cpp
cpp_backtester/src/engine/: backtesting_engine.cpp  strategy_parser.cpp
cpp_backtester/src/nodes/: conditional_node.cpp  node_processor.cpp  sort_node.cpp  stock_node.cpp
cpp_backtester/src/ta/: ta_functions.cpp
cpp_backtester/tests/: CMakeLists.txt
cpp_backtester/tests/integration/: small_strategy_validation_test.cpp  test_end_to_end.cpp  test_small_strategy.cpp  test_small_strategy_comprehensive.cpp
cpp_backtester/tests/performance/: benchmark_engine.cpp  test_small_strategy_graph_performance.cpp  test_small_strategy_performance.cpp
cpp_backtester/tests/unit/: test_backtesting_engine.cpp  test_node_processors.cpp  test_stock_node.cpp  test_strategy_parser.cpp  test_technical_indicators.cpp  test_types.cpp
cpp_backtester/tests/validation/: test_julia_compatibility.cpp
(+244 files in other folders)
